tests/neg-custom-args/captures/consume-overrides.check
-- [E164] Declaration Error: tests/neg-custom-args/captures/consume-overrides.scala:9:6 --------------------------------
9 |  def bar(consume x: C): C // error
  |      ^
  |error overriding method bar in trait A of type (x: C): C;
  |  method bar of type (consume x: C): C has a consume parameter x but the corresponding parameter in the overridden definition is not marked consume
  |
  | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg-custom-args/captures/consume-overrides.scala:15:15 ------------------------------
15 |abstract class C extends A[C], B2 // error
   |               ^
   |error overriding method bar in trait A of type (x: C): C;
   |  method bar in trait B2 of type (consume x: C): C has a consume parameter x but the corresponding parameter in the overridden definition is not marked consume
   |
   | longer explanation available when compiling with `-explain`
